# proc_image_processing

./: .dockerignore  .env.example  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.clion  Dockerfile.cuda  Dockerfile.sonarcloud  LICENSE  README.md  clion.env.vars  docker-compose-bags-vscode.yml  docker-compose-bags.yml  docker-compose-cpu.yml  docker-compose-gpu.yml  docker-compose.yml  package.xml  sonar-project.properties  sonarcloud.properties
.devcontainer/: devcontainer-cpu.json  devcontainer-gpu.json  devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report_critical.md  bug_report_high.md  bug_report_low.md  bug_report_medium.md  config.yml  enhancement_request_critical.md  enhancement_request_high.md  enhancement_request_low.md  enhancement_request_medium.md  feature_request_critical.md  feature_request_high.md  feature_request_low.md  feature_request_medium.md
.github/workflows/: docker-image-perception-develop.yml  docker-image-perception-feature.yml  docker-image-perception-master.yml  factory_generator.yml  sonarcloud.yml
config/filterchain/: camera_feed.yaml  coco_test.yaml  deep_bat_wolf.yaml  deep_draugr.yaml  deep_front.yaml  deep_jiangshi.yaml  deep_vampire.yaml  deep_vetalas.yaml  gate.yaml  hsv_buoy_green.yaml  simple_align_test.yaml  simple_all_dice.yaml  simple_bat_wolf.yaml  simple_bin.yaml  simple_bin_handle.yaml  simple_bin_white.yaml  simple_body_baby.yaml  simple_buoy.yaml  simple_buoy_green.yaml  simple_carre.yaml  simple_coffin_handle.yaml  simple_deep_cashgreen.yaml  simple_deep_cashred.yaml  simple_deep_path.yaml  simple_deep_roulette.yaml  simple_dice1.yaml  simple_dice2.yaml  simple_dice5.yaml  simple_dice6.yaml  simple_draugr.yaml  simple_fence.yaml  simple_gate.yaml  simple_jiangshi.yaml  simple_jiangshi_backup.yaml  simple_new_cam.yaml  simple_pipe.yaml  simple_pipe45.yaml  simple_roulette.yaml  simple_roulette_trad.yaml  simple_slot_machime.yaml  (+10 more)
config/filterchain/archive/: auv6_mission_test_filterchain.yaml  image_feed.yaml  middle_pipe.yaml  object_feature_output.yaml  simple_buoy_green_old.yaml  simple_delorean.yaml  simple_delorean_far.yaml  simple_delorean_far_bache.yaml  simple_delorean_near.yaml  simple_delorean_near_bache.yaml  simple_fence_big.yaml  simple_torpedoes_handle.yaml  simple_track.yaml  simple_train.yaml  torpedoes_big.yaml
config/filterchain/archive_2017/: dummy_filterchain.yaml  find_buoy.yaml  hsv_buoy_green.yaml  hsv_buoy_red.yaml  hsv_test.yaml  simple_bin_white.yaml  simple_buoy.yaml  simple_buoy_green.yaml  simple_buoy_red.yaml  simple_buoy_yellow.yaml  simple_fence.yaml  simple_pigner.yaml  simple_tower.yaml  threshold_red.yaml
config/filterchain/archive_2018/: camera_feed.yaml  simple_deep_cashred.yaml  simple_dice1.yaml  simple_dice2.yaml  simple_dice6.yaml  simple_dollar_sign.yaml  simple_gate.yaml  simple_pipe45.yaml  simple_roulette.yaml  simple_slot_machine.yaml  simple_torpille.yaml
factory_generator/: conf.yml  generate.py
factory_generator/app/: factory.py  tools.py
factory_generator/app/tests/: test_factory.py  test_factory_generator.py  test_factory_generator_exception.py  test_factory_header.py  test_item_header.py  test_tools.py
launch/: proc_image_processing.launch  proc_image_processing_debug.launch
msg/: Detection.msg  DetectionArray.msg  VisionTarget.msg
script/labeler_to_trainer/: LabelMeAnnotation.py  TensorBoxAnnotation.py  main.py
scripts/: sonarcloud-build.sh  sonia_clion_entrypoint.sh  sonia_entrypoint.sh
src/factory_generator/: conf-schema.json  conf.yml  generate.py  requirements-dev.txt
src/factory_generator/app/: factory.py  factory_generator.py  factory_generator_exception.py  factory_header.py  item_header.py  tools.py
src/filter_generator/: Dockerfile  conf-schema.json  conf.yml  generate.py  requirements-dev.txt  requirements.txt
src/filter_generator/app/: app.py  factory.py  factory_header.py  filter.py  filter_generator.py  filter_generator_exception.py  filter_header.py  model.py  tools.py
src/proc_image_processing/: color_map.h  config.h  main.cc  republisher.cc
src/proc_image_processing/algorithm/: contour.cc  contour.h  contour_list.cc  contour_list.h  general_function.cc  general_function.h  image_accumulator_buffer.cc  image_accumulator_buffer.h  line.cc  line.h  major_edge_extractor.cc  major_edge_extractor.h  moments.cc  moments.h  object_basic_data.cc  object_basic_data.h  object_feature.h  object_feature_factory.cc  object_feature_factory.h  object_frame_memory.cc  object_frame_memory.h  object_full_data.cc  object_full_data.h  object_ranker.cc  object_ranker.h  object_ranking_data.h  object_tracking_data.h  performance_evaluator.cc  performance_evaluator.h  rot_rect.cc  rot_rect.h  type_and_const.h
src/proc_image_processing/cpu/: config.h  main.cc
src/proc_image_processing/filters/: abstract_filter.h  adaptive_threshold.h  background_substract.h  bilateral_filter.h  blurr.h  bottom_pipe_finder.h  canny.h  center_coffin_detector.h  contrast_brightness.h  convex_hull.h  deep_2019.h  deep_dice.h  delorean_detector.h  dilate.h  equalize.h  erode.h  fence_detector.h  filter.h  filter_inl.h  (+40 more)
srv/: ChangeNetwork.srv  copy_filterchain.srv  execute_cmd.srv  get_filterchain_filter.srv  get_filterchain_filter_all_param.srv  get_filterchain_filter_param.srv  get_filterchain_from_execution.srv  get_information_list.srv  get_media_from_execution.srv  manage_filterchain.srv  manage_filterchain_filter.srv  republish.srv  save_filterchain.srv  set_filterchain_filter_observer.srv  set_filterchain_filter_order.srv  set_filterchain_filter_param.srv
test/: CMakeLists.txt  black_box_test.cc  filter_chain_test.cc  filter_factory_test.cc  filter_test.cc  global_parameter_handler_test.cc
test/SIFT/: sift_bootlegger_square.py  sift_matches-bootlegger.py
test/assets/config/filterchain/: filter_chain_test_1.yaml  filter_chain_test_2.yaml  filter_chain_test_3.yaml  filter_chain_test_4.yaml
tools/: CMakeLists.txt  README.md  detect_gpu.c
tools/benchmarks/: benchmark1.cc  benchmark2.cc  benchmark3.cc  tools.cc  tools.h
(+310 files in other folders)
