<?xml version="1.0"?>
<package>
  <name>proc_image_processing</name>
  <version>1.0.0</version>
  <description>
    The vision_server package is responsible for acquiring the images from
    the cameras and applying filter and return information on those image.
  </description>

  <author>Thibaut Mattio</author>
  <author>Jérémie St-Jules Prévost</author>
  <author>Pierluc Bédard</author>
  <author>Antoine Dozois</author>


  <maintainer email="jeremie.st.jules.prevost@gmail.com">Jérémie St-Jules Prévost</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>libdc1394-dev</build_depend>
  <build_depend>lib_atlas</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>roslaunch</run_depend>
  <run_depend>std_msgs</run_depend>
    <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>libdc1394-dev</run_depend>
  <run_depend>lib_atlas</run_depend>
  <run_depend>yaml-cpp</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
</package>
